chat/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chocoletter-chat-base-deploy
  namespace: chocoletter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chocoletter-chat-base
  template:
    metadata:
      labels:
        app: chocoletter-chat-base
    spec:
      imagePullSecrets:
        - name: harbor-registry-key
      containers:
        - name: chocoletter-chat-base
          image: chocoletter-chat-image
          ports:
            - containerPort: 8081
