chat/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chocoletter-chat-base-service
  namespace: chocoletter
spec:
  type: ClusterIP
  selector:
    app: chocoletter-chat-base
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
